2008-06-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* include/Makefile.am: Remove trailing white space, fix typo.
	(parallel_headers): Remove duplicate file, sort entries.
	* include/Makefile.in: Regenerate.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-06-05  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/random_shuffle.h:
        (parallel_random_shuffle_drs) Get the actual number of
        threads after entering the parallel region. Indentation.
        * include/parallel/algo.h: (random_shuffle(begin, end))
        Add namespace qualification to avoid ambiguity.

2008-05-15  Johannes Singler  <singler@ira.uka.de>

        * doc/xml/manual/parallel_mode.xml:
        General revision, correct wrong doc and make it more 
        readable. 

2008-05-12  Paolo Carlini  <paolo.carlini@oracle.com>

	Revert:
	2008-05-10  Roberto Bagnara  <bagnara@cs.unipr.it>
	    	    Paolo Carlini  <paolo.carlini@oracle.com>

	* include/debug/vector (vector<>::_M_requires_reallocation): Fix macro.
	* testsuite/23_containers/vector/debug_mode_requires_reallocation.cc:
	New.

2008-05-10  Roberto Bagnara  <bagnara@cs.unipr.it>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	* include/debug/vector (vector<>::_M_requires_reallocation): Fix macro.
	* testsuite/23_containers/vector/debug_mode_requires_reallocation.cc:
	New.

2008-05-07  Johannes Singler  <singler@ira.uka.de>

	* include/parallel/quicksort.h (parallel_sort_qs_conquer):
	Explicitly request number of threads in the parallel clause.
	(parallel_sort_qs): Remove setting the number of threads globally. 

2008-05-06  Johannes Singler  <singler@ira.uka.de>

        * include/parallel/multiway_merge.h (multiway_merge_*_unguarded):
        Pass sentinel directly, to allow correct determination.
        (multiway_merge_loser_tree_unguarded): Remove over-cautious assertion.
        (calls to multiway_merge_*_splitting): Parametrize with type that
	is correct in all cases.